--- a/index.html
+++ b/index.html
@@ -279,6 +279,18 @@
 			text-align: center;
 			color: coral;
 		}
+		video{
+			width: 500px;
+			height: 300px;
+			margin: 0 auto;
+		}
+		button{
+		    float: left;
+			width: 33vw;
+			height: 8vh;
+			text-align: center;
+			margin: 0;
+		}
 	</style>
 
 
@@ -288,9 +300,9 @@
 	<nva>
 		<h1>我们曾经回忆过</h1>
 	</nva>
-	<button></button>
+	
 	<div id='va' class="shipin">
-		<video width="500px" height="200px" controls src='' id='vide'>
+		<video  controls src='' id='vide'>
 		</video>
 
 	</div>
