--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 		}
 		
 		video {
-			width: 500px;
+			width: 100%;
 			height: 300px;
 			margin: 0 auto;
 		}
@@ -294,7 +294,7 @@
 			width: 33vw;
 			height: 8vh;
 			text-align: center;
-			margin: 0;
+			margin:10px;
 		}
 		.vaa{
 			width: 500px;
