--- a/index.html
+++ b/index.html
@@ -339,59 +339,66 @@
 		var ul = document.getElementById('hexGrid')
 		for (var i = 0; i < arr.length; i++) {
 			ul.innerHTML += `<li class="hex">
-			         <a class="hexIn" href="#">
+			         <a class="hexIn" href=${arr[i]}>
 				     <img src="${arr[i]}" alt="" />
-				     <h1></h1>
-				     <p></p>
+				     <h1>满载这回忆</h1>
+				     <p>记忆</p>
 			         </a>
 		             </li>`
 		}
 
 		//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~视频~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~！！
 		var arrV = [
-
-
 			{
-				src: 'http://211.142.194.141/ws.acgvideo.com/3/4e/7610480-1.mp4?wsTime=1497498958&platform=html5&wsSecret2=3d21a78e6a4c4300ef39ec6b5ff7b74d&oi=1973341032&rate=110&wshc_tag=0&wsts_tag=5941f090&wsid_tag=759ecb68&wsiphost=ipdbm',
-				name: '白金区攻城'
-			},
-			{
-				src: 'http://111.6.185.66/ws.acgvideo.com/f/ba/16944142-1.mp4?wsTime=1497500054&platform=html5&wsSecret2=f7a31ee000c0e0a4ad4ddbe8291bba55&oi=1973341032&rate=110&wshc_tag=0&wsts_tag=5941f4d5&wsid_tag=759ecb68&wsiphost=ipdbm',
-				name: '热血传奇漫谈'
-			},
-			{
-				src: 'http://111.6.185.71/ws.acgvideo.com/2/d8/1044877-1.mp4?wsTime=1497499992&platform=html5&wsSecret2=c4fc2f8d888489f8a017b5b33b1d3b81&oi=1973341032&rate=110&wshc_tag=0&wsts_tag=5941f5c2&wsid_tag=759ecb68&wsiphost=ipdbm',
-				name: '热血传奇背景乐（一代人的经典回忆）'
-			},
-			{
-				src: 'http://211.142.194.139/ws.acgvideo.com/4/e7/2398706-1.mp4?wsTime=1497500569&platform=html5&wsSecret2=720d31a826371679a97ff50a88eef476&oi=1973341032&rate=110&wshc_tag=0&wsts_tag=5941f664&wsid_tag=759ecb68&wsiphost=ipdbm',
+				src: './vide/一个跑单的故事.mp4',
 				name: '一个跑单的故事'
 			},
 			{
-				src: 'http://111.6.185.79/ws.acgvideo.com/4/e2/16094184-1.mp4?wsTime=1497500666&platform=html5&wsSecret2=9c2018d60acc6e3cf3bb4788dabf1a4a&oi=1973341032&rate=110&wshc_tag=0&wsts_tag=5941f6e4&wsid_tag=759ecb68&wsiphost=ipdbm',
-				name: '配同名歌'
+				src: './vide/沙画功沙.mp4',
+				name: '沙画攻城'
 			},
 			{
-				src: 'http://211.142.197.29/ws.acgvideo.com/f/b8/15563661-1.mp4?wsTime=1497500884&platform=html5&wsSecret2=7ed54f60f92f9b68298b121e99d1fcda&oi=1973341032&rate=110&wshc_tag=0&wsts_tag=5941f7c0&wsid_tag=759ecb68&wsiphost=ipdbm',
-				name: '热血传奇宣传'
+				src: './vide/白金区攻城战.mp4',
+				name: '白金区攻城'
+			},
+			{
+				src: './vide/回忆当年的传奇.mp4',
+				name: '回忆当年的传奇'
+			},
+			{
+				src: './vide/经典回忆 玩过的都懂.mp4',
+				name: '经典回忆 玩过的都懂'
+			},
+			{
+				src: './vide/配同名歌曲.mp4',
+				name: '配同名歌曲'
+			},
+			{
+				src: './vide/热血.mp4',
+				name: '热血'
+			},
+			{
+				src: './vide/热血怀旧版.mp4',
+				name: '热血怀旧版'
 			},
 
 			{
-				src: "http://111.6.185.72/ws.acgvideo.com/0/a2/6958539-1.mp4?wsTime=1497501824&platform=html5&wsSecret2=f12313d92701efd2e1d2c4e892cbce64&oi=1973341032&rate=110&wshc_tag=0&wsts_tag=5941fce7&wsid_tag=759ecb68&wsiphost=ipdbm",
-				name: '沙画沙巴克'
+				src: "./vide/盛大GM怪物攻城.mp4",
+				name: '盛大GM怪物攻城'
 			},
 			{
-				src: 'http://111.47.220.193/ws.acgvideo.com/2/3b/10499637-1.mp4?wsTime=1497502295&platform=html5&wsSecret2=6160442eaf03f966334f82d353f0effb&oi=1973341032&rate=110&wshc_tag=0&wsts_tag=5941febf&wsid_tag=759ecb68&wsiphost=ipdbm',
-				name: '怀旧宣传片'
+				src: './vide/吐槽传奇永恒.mp4',
+				name: '吐槽传奇永恒'
 			},
 			{
-				src: 'http://111.6.185.59/ws.acgvideo.com/4/7b/2560383-1.mp4?wsTime=1497503613&platform=html5&wsSecret2=8666e2562e85ffc5c0d71a7784eeee41&oi=1973341032&rate=110&wshc_tag=0&wsts_tag=59420265&wsid_tag=759ecb68&wsiphost=ipdbm',
-				name: '回忆当年'
+				src: './vide/我们曾今回忆过的.mp4',
+				name: '我们曾今回忆过的'
 			},
 			{
-				src: 'http://111.6.184.54/ws.acgvideo.com/e/e5/4303020-1.mp4?wsTime=1497504102&platform=html5&wsSecret2=a7f6eb9c44625322cdf3e862bdb7f19d&oi=1973341032&rate=110&wshc_tag=0&wsts_tag=5942044f&wsid_tag=759ecb68&wsiphost=ipdbm',
-				name: '热血重演'
+				src: './vide/这熟悉的背景乐.mp4',
+				name: '这熟悉的背景乐'
 			}
+			
 		]
 		var vide = document.getElementById('vide')
 		var va = document.getElementById('va')//视频所在的DIV
