--- a/index.html
+++ b/index.html
@@ -354,6 +354,10 @@
 				name: '一个跑单的故事'
 			},
 			{
+				src: './vide/热血重演.mp4',
+				name: '热血重演'
+			},
+			{
 				src: './vide/沙画功沙.mp4',
 				name: '沙画攻城'
 			},
