--- a/index.html
+++ b/index.html
@@ -265,7 +265,6 @@
 				clear: left;
 			}
 		}
-		
 		@media (max-width: 400px) {
 			#hexGrid {
 				font-size: 13px;
@@ -314,8 +313,6 @@
 		<video controls autoplay src='./vide/一个跑单的故事.mp4' id='vide' webkit-playsinline='true'></video>
 	</div>
 	<div id='va' class="shipin">
-
-
 
 	</div>
 	<ul id="hexGrid">
@@ -401,6 +398,10 @@
 			{
 				src: './vide/这熟悉的背景乐.mp4',
 				name: '这熟悉的背景乐'
+			},
+			{
+				src: './跳动的心.html',
+				name: '跳动的心'
 			}
 			
 		]
