--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 
 
 	</ul>
-
+	<a href="./跳动的心.html"><button>跳动的心</button></a>
 
 	<script>
 		//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~UL创建图片~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~！！
@@ -399,11 +399,6 @@
 				src: './vide/这熟悉的背景乐.mp4',
 				name: '这熟悉的背景乐'
 			},
-			{
-				src: './跳动的心.html',
-				name: '跳动的心'
-			}
-			
 		]
 		var vide = document.getElementById('vide')
 		var va = document.getElementById('va')//视频所在的DIV
